--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.29.1",
     "polka": "next",
     "sirv": "^1.0.0",
-    "sveltestrap": "^3.11.0"
+    "sveltestrap": "^3.11.0",
+    "sweetalert2": "^10.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
