(pasando a mysql desde cero)

--- a/backend/api/article/models/article.settings.json
+++ b/backend/api/article/models/article.settings.json
@@ -23,8 +23,11 @@
     "image": {
       "model": "file",
       "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
       "plugin": "upload",
-      "required": true
+      "required": false
     },
     "category": {
       "model": "category",
